# playing_with_stm32

init/: .gitignore  CMakeLists.txt  Makefile  final.map  main.c  stm32_ls.ld  stm32h7_startup.c  stm32h7x_startup.s
init/cmake/: compiler.cmake  linker.cmake  toolchain.cmake
init/src/: main.c
init/stm32h723/: CMakeLists.txt  stm32h723_startup.s  stm32h743.ld
init/stm32h723/hardware/: CMakeLists.txt
init/stm32h723/hardware/include/hardware_regs/: gpio_regs.h  platform_defs.h  types.h
init/stm32h723/hardware/include/hardware_structs/: gpio_structs.h  types.h
